--- a/views/socials.handlebars
+++ b/views/socials.handlebars
@@ -7,7 +7,7 @@
         <div class="form-group">
           <label for="twitter-login">Twitter:</label>
           <input
-            placeholder="twitter username"
+            placeholder="Twitter Username"
             type="text"
             id="twitter-login"
             name="twitter"
@@ -21,7 +21,7 @@
           <input
             type="text"
             id="instagram-login"
-            placeholder="instagram username"
+            placeholder="Instagram Username"
             name="instagram"
             class="form-control"
             
@@ -33,7 +33,7 @@
           <input
             type="text"
             id="tikTok-login"
-            placeholder="tiktok username"
+            placeholder="TikTok Username"
             name="tikTok"
             class="form-control"
            
@@ -45,7 +45,7 @@
           <input
             type="text"
             id="youtube-login"
-            placeholder="youtube username"
+            placeholder="YouTube Username"
             name="youtube"
             class="form-control"
             
@@ -57,7 +57,7 @@
           <input
             type="text"
             id="github-login"
-            placeholder="github username"
+            placeholder="GitHub Username"
             name="github"
             class="form-control"
             
@@ -69,7 +69,7 @@
           <input
             type="text"
             id="twitch-login"
-            placeholder="twitch username"
+            placeholder="Twitch Username"
             name="twitch"
             class="form-control"
     
