fixed homepage render of constellations - cards now show horizontally

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -45,7 +45,8 @@
 {{/if}}
 
 
-
+<div class="d-flex flex-wrap justify-content-center my-5">
 {{#each constellations as |constellation|}}
 {{> constellation-details}}
 {{/each}}
+</div>
