--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -1,7 +1,7 @@
 <!-- constellation-details.handlebars -->
 
-<div class="d-flex flex-wrap justify-content-center mt-3">
-  <div class="card text-white bg-dark m-3" style="width: 20rem; opacity: 0.94; flex: 0 0 30%;">
+
+  <div class="card text-white bg-dark mx-3" style="width: 20rem; opacity: 0.94; flex: 0 0 30%;">
     <img class="card-img-top"
       src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
       class="card-img-top" alt="person amongst stars" alt="Card image cap" />
@@ -11,4 +11,3 @@
       <a href="/profile/{{id}}" class="btn btn-primary ">View Profile</a>
     </div>
   </div>
-</div>
