centered seeded statuses

--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -7,7 +7,7 @@
       class="card-img-top" alt="person amongst stars" alt="Card image cap" />
     <div class="card-body d-flex flex-column align-items-center">
       <h5 class="card-title">@{{username}}</h5>
-      <p class="card-text small m-3">"<i>{{status.status}}"</i></p>
+      <p class="card-text small m-3 text-center">"<i>{{status.status}}"</i></p>
       <a href="/profile/{{id}}" class="btn btn-primary ">View Profile</a>
     </div>
   </div>
