--- a/views/socials.handlebars
+++ b/views/socials.handlebars
@@ -1,3 +1,23 @@
+  <style>
+    body { background-image:
+    url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover; background-position: center; background-repeat:
+    no-repeat; height: 100vh; margin: 0;
+    color: #FAF3DD; font-size: 15px; } .container { height: 100vh; display:
+    flex; align-items: center; justify-content: center; } .card {
+    background-color: #070600; border-radius: 8px; box-shadow: 0 0 10px
+    rgba(247, 243, 227, 0.3); } .welcome-message { text-align: center;
+    font-size: 30px; margin-bottom: 20px; color: #FAF3DD; text-shadow: 0 0 10px
+    rgba(247, 243, 227, 0.5); font-weight:
+    700; } label { display: block; margin-bottom: 8px; } .input-container {
+    position: relative; } input { width: 100%; padding: 8px; margin-bottom:
+    16px; box-sizing: border-box; } .eye-icon { width: 20px; position: absolute;
+    right: 10px; top: 70%; transform: translateY(-50%); cursor: pointer; color:
+    #070600; } .btn { color: #fff; border-radius: 4px; cursor: pointer; }
+  </style>
+
+
+
 <body>
   <div class="d-flex container justify-content-center">
     <form class="socials-form card col-md-6" action="/api/users/socials" method="post">
