--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,56 +1,3 @@
-{{!-- {{#if loading}}
-<div class="spinner-border" role="status">
-  <span class="sr-only">Loading...</span>
-</div>
-{{else}}
-{{#if session.logged_in}}
-<div class="profile-container">
-  <h2>Hello, {{username}}!</h2>
-
-  <section class="profile-info">
-
-    <h3>{{username}}</h3>
-
-
-    <div class="media">
-      <img src="{{profilePicture}}" class="mr-3" alt="Profile Picture">
-      <div class="media-body">
-        <h5 class="mt-0">Profile Picture</h5>
-        <p>Upload or change your profile picture</p>
-
-      </div>
-    </div>
-  </section>
-
-  <section class="status-section">
-
-    <form id="statusForm" action="/api/status" method="POST">
-      <div class="form-group">
-        <label for="status">Post your status:</label>
-        <textarea class="form-control" id="status" name="status" rows="3" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Post Status</button>
-    </form>
-
-    <h3>Your Statuses:</h3>
-    <ul>
-      {{#each statuses}}
-      <li>
-        <p>{{status}}</p>
-
-      </li>
-      {{/each}}
-    </ul>
-  </section>
-</div>
-{{else}}
-
-{{/if}}
-{{/if}} --}}
-
-{{!-- -------------------------------------------------------------------------------------------------- --}}
-
-
 <div class="profile-username d-flex justify-content-center">
   <h1 class="text-center font-weight-bold">{{constellation.username}}'s Constellation</h1>
 </div>
@@ -59,39 +6,39 @@
 <br />
 
 <div class="socials-container d-flex flex-column justify-content-center text-center m-2">
-  <div class="mb-3">
+  <div class="mb-4">
     {{#if constellation.social.twitter}}
-    <a href="https://twitter.com/{{constellation.social.twitter}}" target="_blank" class="text-white font-weight-bolder">Twitter</a>
+    <a href="https://twitter.com/{{constellation.social.twitter}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">Twitter</a>
     {{/if}}
   </div>
 
-  <div class="mb-3">
+  <div class="mb-4">
     {{#if constellation.social.instagram}}
-    <a href="https://instagram.com/{{constellation.social.instagram}}" target="_blank" class="text-white font-weight-bolder">Instagram</a>
+    <a href="https://instagram.com/{{constellation.social.instagram}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">Instagram</a>
     {{/if}}
   </div>
 
-  <div class="mb-3">
+  <div class="mb-4">
     {{#if constellation.social.github}}
-    <a href="https://github.com/{{constellation.social.github}}" target="_blank" class="text-white font-weight-bolder">GitHub</a>
+    <a href="https://github.com/{{constellation.social.github}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">GitHub</a>
     {{/if}}
   </div>
 
-  <div class="mb-3">
+  <div class="mb-4">
     {{#if constellation.social.youtube}}
-    <a href="https://youtube.com/@{{constellation.social.youtube}}" target="_blank" class="text-white font-weight-bolder">YouTube</a>
+    <a href="https://youtube.com/@{{constellation.social.youtube}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">YouTube</a>
     {{/if}}
   </div>
 
-  <div class="mb-3">
+  <div class="mb-4">
     {{#if constellation.social.tiktok}}
-    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" target="_blank" class="text-white font-weight-bolder">TikTok</a>
+    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">TikTok</a>
     {{/if}}
   </div>
 
-  <div class="mb-3">
+  <div class="mb-4">
     {{#if constellation.social.twitch}}
-    <a href="https://twitch.tv/{{constellation.social.twitch}}" target="_blank"  class="text-white font-weight-bolder">Twitch</a>
+    <a href="https://twitch.tv/{{constellation.social.twitch}}" target="_blank"  class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">Twitch</a>
     {{/if}}
   </div>
 
