adjusted borders for profile socials to match navbar color background

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,37 +8,37 @@
 <div class="socials-container d-flex flex-column justify-content-center text-center m-2">
   <div class="mb-4">
     {{#if constellation.social.twitter}}
-    <a href="https://twitter.com/{{constellation.social.twitter}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">Twitter</a>
+    <a href="https://twitter.com/{{constellation.social.twitter}}" target="_blank" class="rounded border border-dark inline-block text-white font-weight-bolder p-1" style="background-color: rgba(0, 0, 0, 0.8);">Twitter</a>
     {{/if}}
   </div>
 
   <div class="mb-4">
     {{#if constellation.social.instagram}}
-    <a href="https://instagram.com/{{constellation.social.instagram}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">Instagram</a>
+    <a href="https://instagram.com/{{constellation.social.instagram}}" target="_blank" class="rounded border border-dark inline-block text-white font-weight-bolder p-1" style="background-color: rgba(0, 0, 0, 0.8);">Instagram</a>
     {{/if}}
   </div>
 
   <div class="mb-4">
     {{#if constellation.social.github}}
-    <a href="https://github.com/{{constellation.social.github}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">GitHub</a>
+    <a href="https://github.com/{{constellation.social.github}}" target="_blank" class="rounded border border-dark inline-block text-white font-weight-bolder p-1" style="background-color: rgba(0, 0, 0, 0.8);">GitHub</a>
     {{/if}}
   </div>
 
   <div class="mb-4">
     {{#if constellation.social.youtube}}
-    <a href="https://youtube.com/@{{constellation.social.youtube}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">YouTube</a>
+    <a href="https://youtube.com/@{{constellation.social.youtube}}" target="_blank" class="rounded border border-dark inline-block text-white font-weight-bolder p-1" style="background-color: rgba(0, 0, 0, 0.8);">YouTube</a>
     {{/if}}
   </div>
 
   <div class="mb-4">
     {{#if constellation.social.tiktok}}
-    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" target="_blank" class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">TikTok</a>
+    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" target="_blank" class="rounded border border-dark inline-block text-white font-weight-bolder p-1" style="background-color: rgba(0, 0, 0, 0.8);">TikTok</a>
     {{/if}}
   </div>
 
   <div class="mb-4">
     {{#if constellation.social.twitch}}
-    <a href="https://twitch.tv/{{constellation.social.twitch}}" target="_blank"  class="rounded border border-dark bg-dark inline-block text-white font-weight-bolder p-1">Twitch</a>
+    <a href="https://twitch.tv/{{constellation.social.twitch}}" target="_blank"  class="rounded border border-dark inline-block text-white font-weight-bolder p-1" style="background-color: rgba(0, 0, 0, 0.8);">Twitch</a>
     {{/if}}
   </div>
 
