made cards responsive to mobile view

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -46,7 +46,9 @@
 
 
 <div class="d-flex flex-wrap justify-content-center my-5">
-{{#each constellations as |constellation|}}
-{{> constellation-details}}
-{{/each}}
+  {{#each constellations as |constellation|}}
+  <div class="col-md-4 col-sm-6 col-xs-12 mb-4">
+    {{> constellation-details}}
+  </div>
+  {{/each}}
 </div>
