--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -130,10 +130,10 @@
       <a style="color: #FAF3DD;" class="navbar-brand" href="/">Constellation</a>
 
       <!-- Toggle button with glowing effect -->
-      <button class="navbar-toggler glow-on-hover" type="button" data-toggle="collapse" data-target="#navbarNav"
+      {{!-- <button class="navbar-toggler glow-on-hover" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i style="color: #FAF3DD;" class="material-icons">Menu</i>
-      </button>
+      </button> --}}
 
       <!-- Collapsible wrapper -->
       <div class="collapse navbar-collapse" id="navbarNav">
