Replaced profile social media text with icons that are linked

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet" />
-
-  {{!-- removed font style: font-family: 'Space Mono', monospace; --}}
+  <script src="https://kit.fontawesome.com/feb9ae65df.js" crossorigin="anonymous"></script> 
+{{!-- for font awesome icons ^^^ --}}
+ 
   <style>
     body {
       background-image:
