--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -79,3 +79,9 @@
   </div>
 
 </div>
+
+{{!-- status to be rendered below icons in large italicized font + --}}
+{{!-- <div class="container status-container d-flex justify-content-center text-center m-3">
+  {{#if constellation.status.status}}
+  {{/if}}
+</div> --}}
