Updated body text and profile icons to match in color

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
       height: 100vh;
       margin: 0;
       width: 100%;
-      color: #FAF3DD;
+      color: #ffffff;
       font-size: 15px;
     }
 
