--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,14 +1,14 @@
 <div class="profile-username d-flex justify-content-center">
-  <h1 class="text-center font-weight-bold">{{constellation.username}}'s Constellation</h1>
+  <h1 class="text-center font-weight-bold  mt-4">{{constellation.username}}'s Constellation</h1>
 </div>
 
 <br />
 <br />
 
-<div class="socials-container d-flex flex-row justify-content-center text-center m-2">
+<div class="socials-container d-flex flex-row justify-content-center text-center mt-3">
   <div class="m-2">
 
-    
+
     {{#if constellation.social.twitter}}
     <a href="https://twitter.com/{{constellation.social.twitter}}" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" height="52" width="48"
@@ -68,7 +68,7 @@
     {{/if}}
   </div>
 
-<div class="m-2">
+  <div class="m-2">
     {{#if constellation.social.twitch}}
     <a href="https://twitch.tv/{{constellation.social.twitch}}" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" height="50" width="50"
@@ -83,7 +83,19 @@
 </div>
 
 {{!-- status to be rendered below icons in large italicized font + --}}
-{{!-- <div class="container status-container d-flex justify-content-center text-center m-3">
+
+<div class ="mt-5">
   {{#if constellation.status.status}}
+  <div class="card">
+    <div class="card-header text-dark">
+      Status
+    </div>
+    <div class="card-body">
+      <blockquote class="blockquote mb-0 ">
+        <p class="text-muted">"{{constellation.status.status}}"</p>
+        <footer class="blockquote-footer"><cite title="Source Title">{{constellation.username}}</cite></footer>
+      </blockquote>
+    </div>
+  </div>
   {{/if}}
-</div> --}}
+</div>
