--- a/views/socials.handlebars
+++ b/views/socials.handlebars
@@ -96,6 +96,18 @@
           />
         </div>
 
+        <div class="form-group input-container">
+          <label for="social-status">Status:</label>
+          <input
+            type="text"
+            id="social-status"
+            placeholder="Share a status for others to see!"
+            name="status"
+            class="form-control"
+  
+          />
+        </div>
+
         <button
           style="background-color: #43AA8B;"
           type="submit"
