--- a/views/socials.handlebars
+++ b/views/socials.handlebars
@@ -77,7 +77,7 @@
   <div class="d-flex container justify-content-center">
     <form class="socials-form card col-md-6" action="/api/users/socials" method="post">
       <div class="card-body">
-        <h2 class="text-center mb-4 social-message">Add/edit your socials to your constellation!</h2>
+        <h2 class="text-center mb-4 social-message">Add or update your socials!</h2>
 
         <div class="form-group">
           <label for="twitter-login">Twitter:</label>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="form-group input-container">
-          <label for="social-status">Status:</label>
+          <label for="social-status">Profile Status:</label>
           <input type="text" id="social-status" placeholder="Share a status for others to see!" name="status"
             class="form-control" />
         </div>
