fixed text overflow

--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -4,7 +4,7 @@
     <img class="card-img-top"
       src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
       class="card-img-top" alt="person amongst stars" alt="Card image cap" />
-    <div class="card-body d-flex flex-column align-items-center">
+    <div class="card-body d-flex flex-column align-items-center text-truncate m-3">
       <h5 class="card-title">@{{username}}</h5>
       <p class="card-text small m-3 text-center">"<i>{{status.status}}"</i></p>
       <a href="/profile/{{id}}" class="btn btn-primary ">View Profile</a>
