--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -86,13 +86,13 @@
 
 <div class ="mt-5">
   {{#if constellation.status.status}}
-  <div class="card">
-    <div class="card-header text-dark">
+  <div class="card border border-dark border-rounded">
+    <div class="card-header text-light bg-dark">
       Status
     </div>
-    <div class="card-body">
-      <blockquote class="blockquote mb-0 ">
-        <p class="text-muted">"{{constellation.status.status}}"</p>
+    <div class="card-body" style="background-color: rgba(0, 0, 0, 0.8);">
+      <blockquote class="blockquote mb-0">
+        <p class="text-light p-4">"{{constellation.status.status}}"</p>
         <footer class="blockquote-footer"><cite title="Source Title">{{constellation.username}}</cite></footer>
       </blockquote>
     </div>
